--- a/index.html
+++ b/index.html
@@ -4,9 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Keshav Kaushik - Frontend Software Engineer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+    <img src="keshav-profile-image.png" alt="Keshav Kaushik profile image">
     <h1>Keshav Kaushik</h1>
+    <h2>Frontend Software Engineer</h2>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I am a frontend software engineer with 6+ years of experience. I have worked on a variety of projects, including ESG, BCM, Salesforce Web Platform, KiA.com website, and an internal expense portal for a large organization. I have a strong track record of delivering high-quality, user-friendly, and responsive web applications.</p>
+      <a href="#skills">View Skills</a>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+
+      <ul class="skills-list">
+        <li>UI Development</li>
+        <li>Web Page Development</li>
+        <li>Cross-Browser Compatibility</li>
+        <li>Responsive Design</li>
+        <li>JavaScript</li>
+        <li>Debugging</li>
+        <li>Production Issue Resolution</li>
+        <li>GraphQL</li>
+        <li>Frontend Frameworks (React, Angular, Vue)</li>
+        <li>Component Development</li>
+        <li>State Management</li>
+        <li>API Integration</li>
+      </ul>
+
+      <a href="#experience">View Experience</a>
+    </section>
+
+    <section id="experience">
+      <h2>Experience</h2>
+
+      <ul class="experience-list">
+        <li>Frontend Software Engineer (6+ years)</li>
+        <li>Salesforce (1.2+ years)</li>
+        <li>Servicenow (2.8+ years)</li>
+        <li>TA Digital, INC. (2.0+ years)</li>
+      </ul>
+
+      <a href="#projects">View Projects</a>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+
+      <ul class="projects-list">
+        <li>ESG</li>
+        <li>BCM</li>
+        <li>Salesforce Web Platform</li>
+        <li>KiA.com website</li>
+        <li>Internal expense portal</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>Include your email address and phone number here.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Copyright &copy; 2023 Keshav Kaushik</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
