--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
       <h2>Contact Me</h2>
       <p>Include your email address and phone number here.</p>
     </section>
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form action="mailto:youremail@example.com" method="post">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
   </main>
 
   <footer>
