--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <img src="IMG_1541.HEIC" alt="Keshav Kaushik profile image">
+    <img src="IMG_1541.jpg" alt="Keshav Kaushik profile image">
     <h1>Keshav Kaushik</h1>
     <h2>Frontend Software Engineer</h2>
   </header>
